fixed the alignment of node name in the ai agent node

--- a/src/components/DiagramEditor/DiagramEditor.css
+++ b/src/components/DiagramEditor/DiagramEditor.css
@@ -70,20 +70,23 @@
   border-radius: 50%;
 }
 .node-img-content {
-  width: 50px;
-  height: 50px;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  gap: 0.2rem;
   align-items: center;
   justify-content: center;
   color: var(--text-primary);
   font-weight: 600;
+  padding: 0.9rem;
 }
-.node-img-content img {
-  width: 100%;
-  height: 100%;
+.node-img-content svg {
+  min-width: 50px;
+  min-height: 50px;
   object-fit: contain;
+}
+.ai-agent-name-bar{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .node-name-bar {
   position: absolute;
